Angular loading bar removed,spinner position changed

--- a/code/dev/less/loading-bar.less
+++ b/code/dev/less/loading-bar.less
@@ -61,15 +61,15 @@
   display: block;
   position: fixed;
   z-index: 10002;
-  top: 10px;
-  right: 10px;
+  top: 50%;
+  left: 50%;
 }
 
 #loading-bar-spinner .spinner-icon {
-  width: 14px;
-  height: 14px;
+  width: 32px;
+  height: 32px;
 
-  border:  solid 2px transparent;
+  border:  solid 4px transparent;
   border-top-color:  #eb7a55;
   border-left-color: #eb7a55;
   border-radius: 50%;
