--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -949,13 +949,13 @@ i {
   display: block;
   position: fixed;
   z-index: 10002;
-  top: 10px;
-  right: 10px;
+  top: 50%;
+  left: 50%;
 }
 #loading-bar-spinner .spinner-icon {
-  width: 14px;
-  height: 14px;
-  border: solid 2px transparent;
+  width: 32px;
+  height: 32px;
+  border: solid 4px transparent;
   border-top-color: #eb7a55;
   border-left-color: #eb7a55;
   border-radius: 50%;
