Add a button to show the password in log shipping job edit window

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -728,6 +728,9 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title a {
     padding-left: 20px;
   }
 }
+input[name="destinationPassword"] {
+  max-width: 510px;
+}
 .domain-caching-rules__info .panel-buttons-left {
   padding-right: 30px;
 }
