--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -11,6 +11,7 @@
 @import "shared/filter-generator";
 @import "widget";
 @import "dashboards";
+@import "logshippers";
 @import "domains";
 @import "revapm-icons";
 @import "billing-plan";
