--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -237,8 +237,12 @@ input[type="checkbox"] {
   margin-left: 20px;
 }
 
+// PAGE EDIT ACCOUNT PROFILE
 .section-edit-company {
   padding-bottom: 30px;
+  .select2-container {
+    min-width: 550px;
+  }
 }
 
 //
@@ -272,7 +276,8 @@ textarea {
   }
 }
 
-form, .form {
+form,
+.form {
   & .error-messages {
     display: none;
     opacity: 1;
