--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -245,6 +245,12 @@ input[type="checkbox"] {
   }
 }
 
+
+.billing_contact_details {
+  .select2-container {
+    min-width: 386px;
+  }
+}
 //
 textarea {
   &.form-control {
