--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -150,6 +150,9 @@ input.ui-select-search {
 
 .select2-container {
   min-width: 300px;
+  & .select2-choice{
+    background-color: #F8F8F8;
+  }
 }
 
 select.form-control {
@@ -248,7 +251,7 @@ input[type="checkbox"] {
 
 .billing_contact_details {
   .select2-container {
-    min-width: 386px;
+    min-width: 380px;
   }
 }
 //
