--- a/code/dev/less/users.less
+++ b/code/dev/less/users.less
@@ -5,11 +5,16 @@
 }
 
 .form--user {
-  & .select2-container {
+  & .loader--waite-company{
+    display: block;
+    float: left;
+  }
+  & .select2-container, .loader--waite-company {
     min-width: 550px;
     max-width: 550px;
     @media (max-width: 425px) {
       min-width: 100%;
     }
   }
+
 }
