Issue Fixed Please check

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -369,3 +369,36 @@ form,
     }
   }
 }
+
+.jsoneditor div.tree table.tree {
+     width: auto !important; 
+}
+
+.margin-bottom{
+  margin-bottom:8px;
+}
+
+a:focus{
+  outline:none !important;
+}
+.rps-graph .clearfix > .pull-right {
+  width:100%;
+}
+
+@media screen and (max-width:767px){
+    .navbar-header .ng-isolate-scope > div{ width: 280px !important}
+    .last-btns .btn{ clear: both; margin-bottom: 10px; width: 100% ; }
+    .select2-container .select2-choice{ width: 87%;}
+    select.form-control.fixed135{ width: 100%}
+    select.form-control.fixed{ width: 100%}
+    .table_wrepper{ width: 100%;overflow-y:auto }
+    .table_wrepper table{ width: auto;}
+    #menuToggleBtn{ display: none;}
+    .helpcontainer{width:285;}
+}
+@media screen and (max-width:350px){
+  .navbar-header .ng-isolate-scope > div {
+      width: 235px !important;
+      width:100%;
+  }
+}
