Fix toast message center and ng-message on the left side on the login page

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -342,6 +342,9 @@ form .error-messages.ng-active,
   line-height: 100%;
   opacity: 1;
 }
+.toast-top-right {
+  right: auto;
+}
 input[type="text"],
 input[type="email"],
 input[type="password"],
@@ -434,9 +437,6 @@ textarea {
 .login_box .ng-submitted input.ng-invalid-required {
   border-color: #a94442;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(250, 0, 0, 0.6);
-}
-.login_box .error-messages {
-  text-align: center;
 }
 #main .footerNoteA {
   color: #fff;
