Update Domain Edit Page - add  block parameters "Origin Health Monitoring" and block "Serving of Stale Content"

--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -21,6 +21,9 @@
       min-width: 200px;
     }
   }
+  input[type="number"] {
+    max-width: 120px;
+  }
 }
 
 .caching-rules-list {
@@ -29,7 +32,13 @@
   }
 }
 
-.btn{
+form.domain-edit-form {
+  input[type="number"] {
+    max-width: 120px;
+  }
+}
+
+.btn {
   &-copy--cname {
     margin-left: 10px;
   }
