--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -920,8 +920,14 @@ input[name="destinationPassword"] {
 .domain-caching-rules .ui-select-container .ui-select-search {
   min-width: 200px;
 }
+.domain-caching-rules input[type="number"] {
+  max-width: 120px;
+}
 .caching-rules-list .panel-buttons-left {
   padding-right: 20px;
+}
+form.domain-edit-form input[type="number"] {
+  max-width: 120px;
 }
 .btn-copy--cname {
   margin-left: 10px;
