Add a block with the status of the last purge jobs performed for selected domain on Purge Cached Objects Page

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -135,6 +135,7 @@ table {
       }
     }
     .company-names,
+    .purge-job-snippets,
     .source-name {
       white-space: normal;
       word-break: break-word;
@@ -374,3 +375,11 @@ form,
 .toast-top-right{
   right: auto;
 }
+
+// cache purge
+//
+.modal-body .purges_container{
+    max-height: 50vh;
+    overflow-x: auto;
+    margin-bottom: -15px;
+  }
