--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -148,6 +148,7 @@ table tbody .actions .not-active {
   opacity: 0.65;
 }
 table tbody .company-names,
+table tbody .purge-job-snippets,
 table tbody .source-name {
   white-space: normal;
   word-break: break-word;
@@ -344,6 +345,11 @@ form .error-messages.ng-active,
 }
 .toast-top-right {
   right: auto;
+}
+.modal-body .purges_container {
+  max-height: 50vh;
+  overflow-x: auto;
+  margin-bottom: -15px;
 }
 input[type="text"],
 input[type="email"],
