--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1384,3 +1384,13 @@ del.diff span {
   opacity: 0.4;
   pointer-events: none;
 }
+.approvers-email-list {
+  max-height: 30vh;
+  overflow-y: auto;
+}
+.validation-info-url pre.meta-tag {
+  overflow-x: scroll;
+}
+.validation-info-dns pre.dns-text {
+  overflow-x: scroll;
+}
