--- a/code/dev/less/ssl-names.less
+++ b/code/dev/less/ssl-names.less
@@ -4,12 +4,12 @@
       color: @app-color-blue;
     }
   }
-}
-
-.actions {
-  & .disabled {
-    opacity: 0.4;
-    pointer-events: none;
+  &--table {
+   & .actions {
+      & .disabled {
+        opacity: 0.4;
+      }
+    }
   }
 }
 
