--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -405,3 +405,22 @@ form,
     }
   }
 }
+
+// headers on ssl_names modal windows
+.modal-header {
+  &--error {
+    background-color: @app-color-red;
+  }
+  &--success {
+    background-color: @app-color-green-200;
+  }
+}
+
+.modal-title {
+  &--error {
+    color: @app-color-white;
+  }
+  &--success {
+    color: @app-color-white;
+  }
+}
