move styles changes to less and made gulp less

--- a/code/dev/less/navbar.less
+++ b/code/dev/less/navbar.less
@@ -86,3 +86,13 @@
 .flex {
   width: 100%;
 }
+@media (min-width: 768px) {
+  div[user-login-logout] {
+     display: none;
+  }
+}
+@media (max-width: 980px){
+    .menu-toggle{
+     padding: 20px 0 10px 20px;
+  }
+}
