--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -3,6 +3,14 @@
 }
 
 section[drawer] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 210px;
+  overflow: hidden;
+  min-height: 100%;
+  background-color: #fff;
+  border-right: 1px solid #ddd;
   background-color: @app-side-menu-background;
   border-right: 1px solid #ddd;
   #logo {
@@ -18,6 +26,9 @@ section[drawer] {
     }
   }
   .side-menu {
+    position: absolute;
+    width: 210px;
+    height: 100%;
     .side-menu-item {
       cursor: pointer;
       display: block;
@@ -106,4 +117,16 @@ section[drawer] {
   // &-helperLayer {
   //   background-color: @app-color-orange;
   // }
+}
+@media (max-width: 980px){
+  section[drawer] {
+   z-index: 99999;
+   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+   will-change: transform;
+   transition: -webkit-transform ease-in-out 0.3s, width ease-in-out 0.3s, visibility 0.3s;
+   transition: transform ease-in-out 0.3s, width ease-in-out 0.3s, visibility 0.3s;
+   &.ng-hide {
+      transform: translateX(-210px);
+   }
+ }
 }
