Create new modules for DNS Zone

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -27,3 +27,5 @@
 @import "angular-object-diff";
 @import "staging-environment";
 @import "ssl-names";
+@import "dns-zones";
+// @import "ns1-icons";
