--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1405,3 +1405,25 @@ del.diff span {
 .validation-info-dns pre.dns-text {
   overflow-x: scroll;
 }
+.fill-1,
+.badge-1 {
+  background-color: #00aef9;
+}
+.fill-2,
+.badge-2 {
+  background-color: #f68712;
+}
+.fill-3,
+.badge-3 {
+  background-color: #ed1c24;
+}
+.fill-L,
+.badge-L {
+  background-color: #39b54a;
+}
+form.dns-zone-records--new-form input[type="number"] {
+  max-width: 120px;
+}
+form.dns-zone-records--new-form input[name="subdomain"] {
+  max-width: 360px;
+}
