--- a/code/dev/less/dns-zones.less
+++ b/code/dev/less/dns-zones.less
@@ -19,6 +19,14 @@
   background-color: #39b54a
 }
 
+.ns1-logo{
+  &--title{
+    // background-image: url('image/ns1/white-pb-ns1.svg');
+    line-height: 1.1;
+    vertical-align: top;
+    height: 1em;
+  }
+}
 
 // dns_zone_record
 form.dns-zone-records--new-form{
