--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -270,6 +270,16 @@ textarea.text--courier {
 .text--courier {
   font-family: Courier;
 }
+form .has-error .form-control.ng-valid,
+.form .has-error .form-control.ng-valid {
+  border-color: #2b542c;
+}
+form .has-error .form-control.ng-valid:focus,
+.form .has-error .form-control.ng-valid:focus {
+  border-color: #2b542c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
+}
 form .error-messages,
 .form .error-messages {
   display: none;
