--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -305,6 +305,14 @@ textarea {
 
 form,
 .form {
+  .has-error .form-control.ng-valid {
+    border-color:  #2b542c;
+    &:focus {
+      border-color: #2b542c;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+              box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+  }
+  }
   & .error-messages {
     display: none;
     opacity: 1;
