--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -14,6 +14,7 @@ section[drawer] {
   border-right: 1px solid #ddd;
   background-color: @app-side-menu-background;
   border-right: 1px solid #ddd;
+
   #logo {
     background-color: @app-side-menu-background-logo;
     height: @app-top-menu-height;
@@ -30,6 +31,8 @@ section[drawer] {
     position: absolute;
     width: 210px;
     height: 100%;
+    padding-left: 12px;
+    list-style-type: none;
     .side-menu-item {
       cursor: pointer;
       display: block;
