--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -36,6 +36,9 @@ form.domain-edit-form {
   input[type="number"] {
     max-width: 120px;
   }
+  & .tab-pane {
+    margin: 20px 0px;
+  }
 }
 
 .btn {
