--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -39,6 +39,15 @@ form.domain-edit-form {
   & .tab-pane {
     margin: 20px 0px;
   }
+  .nav-tabs>li {
+    margin-bottom: -6px;
+    > a {
+      color: @app-side-menu-text-color;
+    }
+    &.active>a {
+      color: @app-color-orange-logo;
+    }
+  }
 }
 
 .btn {
