--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -88,7 +88,10 @@ section[drawer] {
       .side-menu-item{
         color: #FF8A00;
       }
-
+    }
+    .open-side-menu-item {
+      background-color: #fcfcfc;
+      margin-left: 2px;
       .side-menu-sub-item {
         display: block;
       }
