Fix CSS style for Top Object Reports

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -481,6 +481,7 @@ form,
     color: @app-color-white;
   }
 }
+// side-menu
 @media (max-width: 980px) {
   #scrim {
      position: absolute;
@@ -495,4 +496,23 @@ form,
   .left-panel {
     left: 0!important
   }
+}
+// Tabs on Top Object Reports Pages
+#topObjectsReportsTabs {
+
+  & .tab-pane {
+    margin: 20px 0px;
+  }
+  .nav-tabs>li {
+    margin-bottom: -6px;
+    > a {
+      color: @app-side-menu-text-color;
+    }
+    &.active>a {
+      color: @app-color-orange-logo;
+    }
+  }
+}
+.clearfix{
+  margin-bottom: 8px;
 }
