--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -453,6 +453,21 @@ form .error-messages.ng-active,
     left: 0 !important;
   }
 }
+#topObjectsReportsTabs .tab-pane {
+  margin: 20px 0px;
+}
+#topObjectsReportsTabs .nav-tabs > li {
+  margin-bottom: -6px;
+}
+#topObjectsReportsTabs .nav-tabs > li > a {
+  color: #515253;
+}
+#topObjectsReportsTabs .nav-tabs > li.active > a {
+  color: #f7941e;
+}
+.clearfix {
+  margin-bottom: 8px;
+}
 input[type="text"],
 input[type="email"],
 input[type="password"],
