--- a/code/dev/less/filter-activity-log.less
+++ b/code/dev/less/filter-activity-log.less
@@ -1,8 +1,16 @@
 .filter-activity-log {
+  &__help{
+    & ul{
+      list-style-type: none;
+    }
+  }
   & select.form-control {
     max-width: none;
   }
   & input.form-control {
     max-width: none;
+  }
+ & .activity-target-select{
+
   }
 }
