--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1597,6 +1597,9 @@ form.dns-zone-records--new-form input[name="subdomain"] {
     margin-right: 0;
   }
 }
+.filter-activity-log__help ul {
+  list-style-type: none;
+}
 .filter-activity-log select.form-control {
   max-width: none;
 }
