--- a/code/dev/less/filter-activity-log.less
+++ b/code/dev/less/filter-activity-log.less
@@ -1,7 +1,11 @@
 .filter-activity-log {
-  &__help{
-    & ul{
+  &__help {
+    & ul {
       list-style-type: none;
+      margin-bottom: 0px;
+    }
+    & p{
+       margin-bottom: 0px;
     }
   }
   & select.form-control {
@@ -10,7 +14,19 @@
   & input.form-control {
     max-width: none;
   }
- & .activity-target-select{
-
+  & .activity-target-select {}
+  & .form-control.date-picker.select2,
+  & .date-picker-wrapper {
+    // margin: 10px;
+    position: relative;
+    .over {
+      // margin-top: 5px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+    }
   }
 }
